--- a/forkafest.html
+++ b/forkafest.html
@@ -54,7 +54,7 @@
       <img src="assets/img/teknik.png" style="height: 30px; width: 30px;">
     </div>
     <ul class="nav-links">
-      <li><a href="index.html" style="color: #0d47a1;">Beranda</a></li>
+      <li><a href="index.html" style="color: #0d47a1;">Beranda INI PEMBEDA HAPUS AJA</a></li>
       <li><a href="profil.html" style="color: #0d47a1;">Tentang kami</a></li>
       <li><a href="prestasi.html" style="color: #0d47a1;">Prestasi</a></li>
       <li><a href="forkafest.html" style="color: #0d47a1;">Forkafest</a></li>
