--- a/profil.html
+++ b/profil.html
@@ -49,7 +49,7 @@
       <img src="assets/img/teknik.png" style="height: 30px; width: 30px;">
     </div>
     <ul class="nav-links">
-      <li><a href="index.html">Beranda</a></li>
+      <li><a href="index.html">Beranda INI PEMBEDA</a></li>
       <li><a href="profil.html">Tentang kami</a></li>
       <li><a href="prestasi.html">Prestasi</a></li>
       <li><a href="forkafest.html">Forkafest</a></li>
