--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
     <main class="mainmain">
         <div class="score-modal-container" id="score-modal">
             <div class="score-content-container">
-                <h1>Congratulation, Quiz Completed !</h1>
+                <h1>Congratulation, Quiz Completed ! INI PEMBEDA</h1>
 
                 <div class="grade-detail">
                     <p>Attempts : 10</p>
