--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                   <div>
                     <h1 class="title">Teknik Informatika</h1>
-                    <p class="sub-title" style="font-family: 'Tinos', serif !important;">Unversitas Muhammadiyah Jember</p>
+                    <p class="sub-title">Unversitas Muhammadiyah Jember</p>
                   </div>
                 </div>
                 <div class="col-md-6"
@@ -135,7 +135,7 @@
                   style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                   <div>
                     <h1 class="title">Teknik Informatika</h1>
-                    <p class="sub-title" style="font-family: 'Tinos', serif !important;">Prodi TI Pertama di Jember</p>
+                    <p class="sub-title">Prodi TI Pertama di Jember</p>
                     <p class="desc" style="font-family: 'Noto Sans Osage', sans-serif;">Bersama Program Studi Teknik Informatika Universitas Muhammadiyah Jember, Anda akan
                       menemukan pengalaman belajar yang tidak hanya fokus ke ilmu pengetahuan melainkan juga pelaksanaan
                       nilai-nilai keislaman untuk membentuk karakter yang religious, profesional, dan competitive. Serta
@@ -153,7 +153,7 @@
                   style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                   <div>
                     <h1 class="title">Potensi Informatika</h1>
-                    <p class="sub-title" style="font-family: 'Tinos', serif !important;">Pengaruh Teknik Informatika Pada Dunia</p>
+                    <p class="sub-title">Pengaruh Teknik Informatika Pada Dunia</p>
                     <p class="desc" style="font-family: 'Noto Sans Osage', sans-serif;">Teknik informatika secara signifikan memengaruhi cara kita hidup, bekerja, dan berinteraksi 
                       dalam skala global. Teknik informatika dalam pendidikan mempromosikan pembelajaran yang lebih partisipatif dan kerjasama antara siswa
                       dan guru. Kemampuan untuk mendiagnosa dan menangani data pasien telah meningkat di bidang kesehatan karena teknologi informasi. 
