fixed quiz major js issue

--- a/bahasa.html
+++ b/bahasa.html
@@ -19,8 +19,10 @@
 </head>
 
 <body>
-  <!-- NAVBAR -->
-
+<a href="index.html">
+  <div class="back-button-container">
+    <i class="fas fa-arrow-left"></i>
+  </div></a>
   <!-- SECTION 1-->
   <section style="background-color: #0D47A1; width: 100%; min-height: 610px;">
     <div class="container">
