--- a/quiz.html
+++ b/quiz.html
@@ -1,93 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TI</title>
-    <link rel="icon" type="image/svg+xml"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2250%22 fill=%22%232da6ff%22></rect><path d=%22M60.80 22.73L60.80 22.73Q61.25 23.45 61.65 24.66Q62.06 25.88 62.06 27.32L62.06 27.32Q62.06 29.75 60.93 31.01Q59.81 32.27 57.83 32.27L57.83 32.27L45.41 32.27L45.41 77.27Q44.69 77.45 43.16 77.72Q41.63 77.99 40.01 77.99L40.01 77.99Q36.59 77.99 35.15 76.73Q33.71 75.47 33.71 72.50L33.71 72.50L33.71 32.27L18.59 32.27Q18.14 31.46 17.73 30.29Q17.33 29.12 17.33 27.68L17.33 27.68Q17.33 25.16 18.45 23.95Q19.58 22.73 21.56 22.73L21.56 22.73L60.80 22.73ZM77.27 77.99L77.27 77.99Q73.85 77.99 72.41 76.73Q70.97 75.47 70.97 72.50L70.97 72.50L70.97 22.73Q71.78 22.55 73.31 22.28Q74.84 22.01 76.37 22.01L76.37 22.01Q79.61 22.01 81.14 23.18Q82.67 24.35 82.67 27.50L82.67 27.50L82.67 77.27Q81.86 77.45 80.38 77.72Q78.89 77.99 77.27 77.99Z%22 fill=%22%23fff%22></path></svg>" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsif.css">
-    <link rel="stylesheet" href="slider.css">
-</head>
-<body onload="NextQUestion(0)">
-    <main class="mainmain">
-        <div class="score-modal-container" id="score-modal">
-            <div class="score-content-container">
-                <h1>Congratulation, Quiz Completed ! INI PEMBEDA</h1>
-
-                <div class="grade-detail">
-                    <p>Attempts : 10</p>
-                    <p>Right Answers : <span id="right-answers"></span></p>
-                    <p>Wrong Answers : <span id="wrong-answers"></span></p>
-                    <p>Grade : <span id="grade-percentage"></span></p>
-                    <p><span id="remarks"></span></p>
-                </div>
-
-                <div class="score-button-container">
-                    <button onclick="closeScoreModal()">Continue</button>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="game-quiz-container">
-
-            <div class="game-details-container">
-                <h1>Score : <span id="player-score"> /10</span></h1>
-                <h1>Question : <span id="question-number"> /10</span></h1>
-            </div>
-
-            <div class="game-question-container">
-                <h1 id="display-question"></h1>
-            </div>
-
-            <div class="game-options-container">
-
-                <div class="score-modal-container" id="option-modal">
-
-                    <div class="modal-content-container">
-                        <h1>Please Pick An Option</h1>
-
-                        <div class="modal-button-container">
-                            <button onclick="closeOptionModal()">Continue</button>
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <span class="spanspan">
-                    <input type="radio" id="option-one" name="option" class="radioquiz" value="optionA" />
-                    <label for="option-one" class="optionquiz" id="option-one-label"></label>
-                </span>
-
-                <span class="spanspan">
-                    <input type="radio" id="option-two" name="option" class="radioquiz" value="optionB" />
-                    <label for="option-two" class="optionquiz" id="option-two-label"></label>
-                </span>
-
-                <span class="spanspan">
-                    <input type="radio" id="option-three" name="option" class="radioquiz" value="optionC" />
-                    <label for="option-three" class="optionquiz" id="option-three-label"></label>
-                </span>
-
-                <span class="spanspan">
-                    <input type="radio" id="option-four" name="option" class="radioquiz" value="optionD" />
-                    <label for="option-four" class="optionquiz" id="option-four-label"></label>
-                </span>
-
-            </div>
-
-            <div class="next-button-container">
-                <button onclick="handleNextQuestion()">Next Question</button>
-            </div>
-        </div>
-    </main>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TI</title>
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2250%22 fill=%22%232da6ff%22></rect><path d=%22M60.80 22.73L60.80 22.73Q61.25 23.45 61.65 24.66Q62.06 25.88 62.06 27.32L62.06 27.32Q62.06 29.75 60.93 31.01Q59.81 32.27 57.83 32.27L57.83 32.27L45.41 32.27L45.41 77.27Q44.69 77.45 43.16 77.72Q41.63 77.99 40.01 77.99L40.01 77.99Q36.59 77.99 35.15 76.73Q33.71 75.47 33.71 72.50L33.71 72.50L33.71 32.27L18.59 32.27Q18.14 31.46 17.73 30.29Q17.33 29.12 17.33 27.68L17.33 27.68Q17.33 25.16 18.45 23.95Q19.58 22.73 21.56 22.73L21.56 22.73L60.80 22.73ZM77.27 77.99L77.27 77.99Q73.85 77.99 72.41 76.73Q70.97 75.47 70.97 72.50L70.97 72.50L70.97 22.73Q71.78 22.55 73.31 22.28Q74.84 22.01 76.37 22.01L76.37 22.01Q79.61 22.01 81.14 23.18Q82.67 24.35 82.67 27.50L82.67 27.50L82.67 77.27Q81.86 77.45 80.38 77.72Q78.89 77.99 77.27 77.99Z%22 fill=%22%23fff%22></path></svg>" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="responsif.css">
     <script src="assets/js/quiz.js"></script>
-    <script src="script.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        document.querySelector("body").addEventListener("load", NextQuestion(0));
+      });
+</script>
+</head>
+
+<body >
+  <!-- backbutton  -->
+<a href="bahasa.html">
+  <div class="back-button-container">
+    <i class="fas fa-arrow-left"></i>
+  </div>
+</a>
+  <main class="mainmain">
+    <div class="score-modal-container" id="score-modal">
+      <div class="score-content-container">
+        <h1>Congratulation, Quiz Completed ! INI PEMBEDA</h1>
+
+        <div class="grade-detail">
+          <p>Attempts : 10</p>
+          <p>Right Answers : <span id="right-answers"></span></p>
+          <p>Wrong Answers : <span id="wrong-answers"></span></p>
+          <p>Grade : <span id="grade-percentage"></span></p>
+          <p><span id="remarks"></span></p>
+        </div>
+
+        <div class="next-button-container">
+          <button onclick="closeScoreModal()">Continue</button>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="game-quiz-container">
+
+      <div class="game-details-container">
+        <h1>Score : <span id="player-score"> /10</span></h1>
+        <h1>Question : <span id="question-number"> /10</span></h1>
+      </div>
+
+      <div class="game-question-container">
+        <h1 id="display-question"></h1>
+      </div>
+
+      <div class="game-options-container">
+
+        <div class="score-modal-container" id="option-modal">
+
+          <div class="modal-content-container">
+            <h1>Please Pick An Option</h1>
+
+            <div class="modal-button-container">
+              <button onclick="closeOptionModal()">Continue</button>
+            </div>
+
+          </div>
+
+        </div>
+
+        <style>
+          /* make radio bg is different when checked */
+          .spanspan {
+            background-color: gray;
+          }
+          .radioquiz:checked+.optionquiz {
+            background-color: #2da6ff;
+          }
+        </style>
+        <span class="spanspan">
+          <input type="radio" id="option-one" name="option" class="radioquiz" value="optionA" />
+          <label for="option-one" class="optionquiz" id="option-one-label"></label>
+        </span>
+
+        <span class="spanspan">
+          <input type="radio" id="option-two" name="option" class="radioquiz" value="optionB" />
+          <label for="option-two" class="optionquiz" id="option-two-label"></label>
+        </span>
+
+        <span class="spanspan">
+          <input type="radio" id="option-three" name="option" class="radioquiz" value="optionC" />
+          <label for="option-three" class="optionquiz" id="option-three-label"></label>
+        </span>
+
+        <span class="spanspan">
+          <input type="radio" id="option-four" name="option" class="radioquiz" value="optionD" />
+          <label for="option-four" class="optionquiz" id="option-four-label"></label>
+        </span>
+
+      </div>
+
+      <div class="next-button-container">
+        <button onclick="handleNextQuestion()">Next Question</button>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
