--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TI</title>
   <link rel="icon" type="image/svg+xml"
-  href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2250%22 fill=%22%232da6ff%22></rect><path d=%22M60.80 22.73L60.80 22.73Q61.25 23.45 61.65 24.66Q62.06 25.88 62.06 27.32L62.06 27.32Q62.06 29.75 60.93 31.01Q59.81 32.27 57.83 32.27L57.83 32.27L45.41 32.27L45.41 77.27Q44.69 77.45 43.16 77.72Q41.63 77.99 40.01 77.99L40.01 77.99Q36.59 77.99 35.15 76.73Q33.71 75.47 33.71 72.50L33.71 72.50L33.71 32.27L18.59 32.27Q18.14 31.46 17.73 30.29Q17.33 29.12 17.33 27.68L17.33 27.68Q17.33 25.16 18.45 23.95Q19.58 22.73 21.56 22.73L21.56 22.73L60.80 22.73ZM77.27 77.99L77.27 77.99Q73.85 77.99 72.41 76.73Q70.97 75.47 70.97 72.50L70.97 72.50L70.97 22.73Q71.78 22.55 73.31 22.28Q74.84 22.01 76.37 22.01L76.37 22.01Q79.61 22.01 81.14 23.18Q82.67 24.35 82.67 27.50L82.67 27.50L82.67 77.27Q81.86 77.45 80.38 77.72Q78.89 77.99 77.27 77.99Z%22 fill=%22%23fff%22></path></svg>" />
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2250%22 fill=%22%232da6ff%22></rect><path d=%22M60.80 22.73L60.80 22.73Q61.25 23.45 61.65 24.66Q62.06 25.88 62.06 27.32L62.06 27.32Q62.06 29.75 60.93 31.01Q59.81 32.27 57.83 32.27L57.83 32.27L45.41 32.27L45.41 77.27Q44.69 77.45 43.16 77.72Q41.63 77.99 40.01 77.99L40.01 77.99Q36.59 77.99 35.15 76.73Q33.71 75.47 33.71 72.50L33.71 72.50L33.71 32.27L18.59 32.27Q18.14 31.46 17.73 30.29Q17.33 29.12 17.33 27.68L17.33 27.68Q17.33 25.16 18.45 23.95Q19.58 22.73 21.56 22.73L21.56 22.73L60.80 22.73ZM77.27 77.99L77.27 77.99Q73.85 77.99 72.41 76.73Q70.97 75.47 70.97 72.50L70.97 72.50L70.97 22.73Q71.78 22.55 73.31 22.28Q74.84 22.01 76.37 22.01L76.37 22.01Q79.61 22.01 81.14 23.18Q82.67 24.35 82.67 27.50L82.67 27.50L82.67 77.27Q81.86 77.45 80.38 77.72Q78.89 77.99 77.27 77.99Z%22 fill=%22%23fff%22></path></svg>" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
@@ -136,7 +136,8 @@
                   <div>
                     <h1 class="title">Teknik Informatika</h1>
                     <p class="sub-title">Prodi TI Pertama di Jember</p>
-                    <p class="desc" style="font-family: 'Noto Sans Osage', sans-serif;">Bersama Program Studi Teknik Informatika Universitas Muhammadiyah Jember, Anda akan
+                    <p class="desc" style="font-family: 'Noto Sans Osage', sans-serif;">Bersama Program Studi Teknik
+                      Informatika Universitas Muhammadiyah Jember, Anda akan
                       menemukan pengalaman belajar yang tidak hanya fokus ke ilmu pengetahuan melainkan juga pelaksanaan
                       nilai-nilai keislaman untuk membentuk karakter yang religious, profesional, dan competitive. Serta
                       dukungan fasilitas belajar yang mendukung dan kondusif untuk mengembangkan potensi Anda.</p>
@@ -154,10 +155,15 @@
                   <div>
                     <h1 class="title">Potensi Informatika</h1>
                     <p class="sub-title">Pengaruh Teknik Informatika Pada Dunia</p>
-                    <p class="desc" style="font-family: 'Noto Sans Osage', sans-serif;">Teknik informatika secara signifikan memengaruhi cara kita hidup, bekerja, dan berinteraksi 
-                      dalam skala global. Teknik informatika dalam pendidikan mempromosikan pembelajaran yang lebih partisipatif dan kerjasama antara siswa
-                      dan guru. Kemampuan untuk mendiagnosa dan menangani data pasien telah meningkat di bidang kesehatan karena teknologi informasi. 
-                      Pengaruhnya juga terlihat dalam hiburan, transportasi, energi, dan lingkungan. Dengan perkembangan yang terus berlanjut, teknik informatika akan terus membentuk masa depan yang lebih terhubung, efisien, dan berkelanjutan.</p>
+                    <p class="desc" style="font-family: 'Noto Sans Osage', sans-serif;">Teknik informatika secara
+                      signifikan memengaruhi cara kita hidup, bekerja, dan berinteraksi
+                      dalam skala global. Teknik informatika dalam pendidikan mempromosikan pembelajaran yang lebih
+                      partisipatif dan kerjasama antara siswa
+                      dan guru. Kemampuan untuk mendiagnosa dan menangani data pasien telah meningkat di bidang
+                      kesehatan karena teknologi informasi.
+                      Pengaruhnya juga terlihat dalam hiburan, transportasi, energi, dan lingkungan. Dengan perkembangan
+                      yang terus berlanjut, teknik informatika akan terus membentuk masa depan yang lebih terhubung,
+                      efisien, dan berkelanjutan.</p>
                   </div>
                 </div>
               </div>
@@ -199,10 +205,17 @@
           </div>
           <div class="col-md-6 aos" delay="150"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
-            <p class="desc" style="color: #000000; font-family: 'Poppins', sans-serif !important;"> <span style="color: #FFB703;">Teknik Informatika</span> adalah disiplin ilmu yang mempelajari penggunaan
-              teknologi informasi dan komunikasi untuk memproses, mengelola, dan menganalisis informasi.  
-              Dalam <span style="color: #FFB703;">Teknik Informatika</span>, mahasiswa mempelajari konsep dan prinsip dasar pemrograman, desain dan pengembangan perangkat lunak, 
-              jaringan komputer, basis data, kecerdasan buatan, dan topik terkait lainnya.
+            <p class="desc" style="color: #000000; font-family: 'Poppins', sans-serif !important;">
+              <span style="color: #FFB703;">Teknik Informatika </span>merupakan bidang ilmu yang mempelajari bagaimana
+              menggunakan teknologi komputer secara optimal guna
+              menangani masalah transformasi atau pengolahan data dengan proses logika. <span
+                style="color: #FFB703;">Teknik Informatika</span>
+              mempelajari berbagai prinsip terkait ilmu komputer mulai dari proses perancangan, pengembangan, pengujian,
+              hingga bevaluasi sistem operasi perangkat lunak. Selama kuliah kamu akan banyak mengkaji pemrograman dan
+              komputasi, dan dibekali pula dengan keterampilan merancang perangkat lunak. <span
+                style="color: #FFB703;">Teknik Informatika</span> menjadi salah satu jurusan yang memiliki banyak
+              peminat. Pada SBMPTN 2021, <span style="color: #FFB703;">Jurusan Teknik
+                Informatika</span> menjadi 5 besar jurusan paling diminati di rumpun saintek.
             <div style="text-align: center; margin-top: 20px;">
               <button class="cta">
                 <span>Lebih Lanjut</span>
