--- a/profil.html
+++ b/profil.html
@@ -99,36 +99,21 @@
       style="background-color: #f8f8f8 !important; background-image: url(assets/img/bgg/bgp.jpeg); width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; color: #fff;">
       <div class="container-fluid" style="height: 100vh; ">
         <div class="img-c">
-          <div style="z-index: 3;" class="heading">
+          <div style="z-index: 3;" class="heading aos">
             <h1 class="title">Profil dan dekskripsi</h1>
             <p class="sub-title">Teknik Informatika</p>
           </div>
         </div>
       </div>
     </section>
-    <!-- <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 490" xmlns="http://www.w3.org/2000/svg"
-      class="transition duration-300 ease-in-out delay-150">
-      <path
-        d="M 0,500 C 0,500 0,125 0,125 C 42.0908430040445,120.22951968066828 84.181686008089,115.45903936133655 128,128 C 171.818313991911,140.54096063866345 217.3640989716884,170.39336223532212 268,166 C 318.6359010283116,161.60663776467788 374.36191810515743,122.96751169737503 432,113 C 489.63808189484257,103.03248830262497 549.188228607682,121.73659097517778 593,119 C 636.811771392318,116.26340902482222 664.8851674641148,92.08612440191388 702,85 C 739.1148325358852,77.91387559808612 785.2711015358589,87.91891141716671 838,101 C 890.7288984641411,114.08108858283329 950.0304263924502,130.23822992941925 1006,132 C 1061.9695736075498,133.76177007058075 1114.6071928943404,121.12816886515634 1167,129 C 1219.3928071056596,136.87183113484366 1271.5408020301884,165.24909460995534 1317,168 C 1362.4591979698116,170.75090539004466 1401.2295989849058,147.87545269502232 1440,125 C 1440,125 1440,500 1440,500 Z"
-        stroke="none" stroke-width="0" fill="#0d47a1" fill-opacity="0.4"
-        class="transition-all duration-300 ease-in-out delay-150 path-0"></path>
-      <path
-        d="M 0,500 C 0,500 0,250 0,250 C 39.19044912633164,235.8437838695181 78.38089825266329,221.68756773903618 135,211 C 191.6191017473367,200.31243226096382 265.66685611567846,193.09351291337336 312,208 C 358.33314388432154,222.90648708662664 376.951677284623,259.93838060747044 415,277 C 453.048322715377,294.06161939252956 510.5264347458299,291.1529646567448 566,286 C 621.4735652541701,280.8470353432552 674.9425837320575,273.44976076555025 726,273 C 777.0574162679425,272.55023923444975 825.7032303259402,279.0479922810542 874,269 C 922.2967696740598,258.9520077189458 970.2444949641811,232.35827011023295 1017,239 C 1063.755505035819,245.64172988976705 1109.3187898173358,285.5189272780142 1149,291 C 1188.6812101826642,296.4810727219858 1222.4803457664755,267.5660207777102 1270,255 C 1317.5196542335245,242.4339792222898 1378.7598271167622,246.2169896111449 1440,250 C 1440,250 1440,500 1440,500 Z"
-        stroke="none" stroke-width="0" fill="#0d47a1" fill-opacity="0.53"
-        class="transition-all duration-300 ease-in-out delay-150 path-1"></path>
-      <path
-        d="M 0,500 C 0,500 0,375 0,375 C 41.794403764307816,382.2990166274551 83.58880752861563,389.59803325491026 135,386 C 186.41119247138437,382.40196674508974 247.43917364984532,367.9068836078141 292,377 C 336.5608263501547,386.0931163921859 364.65449787200305,418.7744323138333 417,418 C 469.34550212799695,417.2255676861667 545.9428348621427,382.9953871368527 594,370 C 642.0571651378573,357.0046128631473 661.5741626794259,365.24401913875596 701,370 C 740.4258373205741,374.75598086124404 799.7605144201538,376.0285363081234 852,375 C 904.2394855798462,373.9714636918766 949.3837796399589,370.6418356287504 996,368 C 1042.616220360041,365.3581643712496 1090.704367020011,363.4041211768749 1143,355 C 1195.295632979989,346.5958788231251 1251.798752279997,331.74167966375 1302,334 C 1352.201247720003,336.25832033625 1396.1006238600016,355.629160168125 1440,375 C 1440,375 1440,500 1440,500 Z"
-        stroke="none" stroke-width="0" fill="#0d47a1" fill-opacity="1"
-        class="transition-all duration-300 ease-in-out delay-150 path-2"></path>
-    </svg> -->
     <!-- deskripsi -->
     <section style="background-color: #0d47a1;">
       <div class="container"
         style="min-height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row">
+        <div class="row aos">
           <h2 style="color: #f8f8f8; padding: 50px;">Program Studi Teknik Informatika</h2>
         </div>
-        <div class="row">
+        <div class="row aos">
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <img src="assets/img/logo.png" alt="" style="max-height: 300px; padding: 30px;">
@@ -164,10 +149,10 @@
     <section style="background-color: #f8f8f8;">
       <div class="container"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row">
+        <div class="row aos">
           <h2 style="padding: 10px;">Sambutan Ketua Jurusan</h2>
         </div>
-        <div class="row">
+        <div class="row aos">
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px 50px;">
             <img src="assets/img/ari.png" alt="" class=" rounded-circle" style="max-height: 300px; max-width: 300px;">
@@ -212,10 +197,10 @@
     <section style="background-color: #0d47a1; margin-top: -10px; color: #f8f8f8;">
       <div class="container"
         style="min-height: 50vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row">
+        <div class="row aos">
           <h2 style="padding: 10px;">Visi dan Misi</h2>
         </div>
-        <div class="row">
+        <div class="row aos">
           <div class="col-md-6"
             style="display: flex; justify-content: flex-start; align-items: center; flex-direction: column; padding: 30px">
             <q class="desc">Menjadi program studi unggul di bidang komputasi cerdas yang berdaya saing di Indonesia
@@ -253,11 +238,11 @@
     <section style="background-color: #f8f8f8;">
       <div class="container"
         style="min-height: 50vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row">
+        <div class="row aos">
           <h2 style="padding: 10px;">Akreditasi</h2>
 
         </div>
-        <div class="row">
+        <div class="row aos">
           <div class="col-md-12"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px;text-align:center">
             <p>Akreditasi Program Studi Teknik Informatika adalah B sesuai dengan no SK Ban PT
@@ -298,32 +283,7 @@
       <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
         <div class="col-md-4">
           <h3>Sekretariat HMD TE</h3>
-          <style>
-            .icon {
-              display: flex;
-              align-items: center;
-            }
 
-            .icon i {
-              margin-right: 15px;
-            }
-
-            .alamat i {
-              margin-right: 20px;
-            }
-
-            .sosmed {
-              margin: 20px 0;
-            }
-
-            .sosmed a {
-
-              color: #f8f8f8;
-              border-radius: 50%;
-              background-color: #0082aa;
-              padding: 10px 13px 10px 13px;
-            }
-          </style>
           <div class="alamat icon">
             <i class="fas fa-map-marker-alt"></i>
             <p>Jl. Raya Bandung Sumedang KM. 21 Jatinangor</p>
@@ -355,6 +315,7 @@
     </div>
   </footer>
   <script src="assets/js/parallax.js"></script>
+  <script src="assets/js/aos.js"></script>
   <script src="script.js"></script>
 
 </body>
