--- a/bahasa.html
+++ b/bahasa.html
@@ -28,7 +28,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="learn">Learn to Code INI PEMBEDA HAPUS AJA</h1>
+          <h1 class="learn">Learn to Code</h1>
           <p class="look">"Jangan meremehkan kekuatan satu baris kode. Setiap kali Anda menulis kode, Anda
             sedang menulis sejarah digital Anda sendiri."</p>
         </div>
