fix css minor issue

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
         transition: .4s ease-in-out;
       }
 
-      .price {
+      .detail {
         position: relative;
         color: black;
         font-size: 0.8em;
@@ -754,6 +754,7 @@
       }
 
       .card-c:hover .details {
+        opacity: 0;
         transform: translateY(11em) translateX(6em);
       }
     </style>
@@ -771,11 +772,11 @@
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <div class="card-c">
               <div class="heading">PMDK</div>
-              <div class="details">Click Me !</div>
-              <div class="price">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP
+              <div class="details"> Click Me !</div>
+              <div class="detail">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP
                 TM sendiri merupakan kepanjangan
                 dari Seleksi Masuk Perguruan Tinggi Muhammadiyah.</div>
-              <button class="btn2">Add to Cart</button>
+              <button class="btn2">More</button>
             </div>
             <div class="glasses">
               <i class="fa-solid fa-book" style="font-size: 100px;"></i>
@@ -785,11 +786,11 @@
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <div class="card-c">
               <div class="heading">SMPTM</div>
-              <div class="details">Click Me !</div>
-              <div class="price">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP
+              <div class="details"> Click Me !</div>
+              <div class="detail">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP
                 TM sendiri
                 merupakan kepanjangan dari Seleksi Masuk Perguruan Tinggi Muhammadiyah.</div>
-              <button class="btn2">Add to Cart</button>
+              <button class="btn2">More</button>
             </div>
             <div class="glasses">
               <i class="fa-solid fa-book" style="font-size: 100px;"></i>
