--- a/profil.html
+++ b/profil.html
@@ -156,7 +156,7 @@
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px 50px;">
             <img src="assets/img/ari.png" alt="" class=" rounded-circle" style="max-height: 300px; max-width: 300px;">
-            <span style="padding-top: 15px;">Ari Eko Wadoyo, S.T., M.Kom</span>
+            <span style="padding-top: 15px; font-weight: 700; font-family: 'Ubuntu', sans-serif;">Ari Eko Wadoyo, S.T., M.Kom</span>
           </div>
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
@@ -198,17 +198,19 @@
       <div class="container"
         style="min-height: 50vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="row aos">
-          <h2 style="padding: 10px;">Visi dan Misi</h2>
+          <h2 class="hide-md" style="padding: 10px;">Visi dan Misi</h2>
         </div>
         <div class="row aos">
           <div class="col-md-6"
             style="display: flex; justify-content: flex-start; align-items: center; flex-direction: column; padding: 30px">
+            <h3>Misi</h3>
             <q class="desc">Menjadi program studi unggul di bidang komputasi cerdas yang berdaya saing di Indonesia
               bernafaskan nilai-nilai
               keislaman pada tahun 2030</q>
           </div>
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px 45px;">
+            <h3>Visi</h3>
             <ol class="desc">
               <li>Menyelenggarakan pendidikan dan pengajaran bidang komputasi cerdas</li>
               <li>Menyelenggarakan penelitian dan pengabdian masyarakat bidang komputasi.</li>
